<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".component.AccountActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="47dp"
            android:layout_marginRight="47dp"
            android:background="@color/main_background"
            tools:context=".component.AccountActivity"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/tvGreetingUser"
                android:layout_marginTop="100dp"
                android:text="@string/text_tv_h2"
                style="@style/styleH2"
                android:textColor="@color/main_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvSubTitle"
                android:layout_marginTop="26dp"
                style="@style/styleTitle"
                android:text="@string/text_tv_title_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="32dp"
                style="@style/styleBody"
                android:text="@string/text_p_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnContinue"
                android:text="@string/text_btn_continue"
                android:textAllCaps="false"
                android:layout_marginTop="98dp"
                style="@style/buttonAccount"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="47dp"
                style="@style/styleBodyAnalysis"
                android:text="@string/text_analysis"
                android:layout_width="256dp"
                android:layout_height="25dp" />
            <TextView
                android:text="@string/text_tv_shape_special"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                style="@style/styleBodyShapeSpecial"
                android:background="@drawable/ic_shape_special"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>