<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".component.AccountActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleBack"
            android:text="@string/back_to_banks_label"
            android:gravity="left|center"
            android:drawableStart="@drawable/ic_arrow_back"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:padding="10dp"
            style="@style/styleH3"
            android:background="@color/main_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />
        <LinearLayout
            android:layout_below="@+id/titleBack"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:background="@color/main_background"
            tools:context=".component.AccountActivity"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/tvTitleData"
                android:text="@string/create_credential_title"
                style="@style/styleH2"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/text_meta_data_credentials"
                style="@style/styleBodySmall"
                android:layout_marginTop="17dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:contentDescription="@null"
                android:id="@+id/ivLogoBank"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_bnmx"
                android:layout_width="140dp"
                android:layout_height="120dp" />
            <TextView
                android:id="@+id/tvInfo"
                android:text="@string/text_meta_data_credentials_info"
                style="@style/styleBodyMedium"
                android:layout_marginTop="17dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:layout_marginTop="10dp"
                android:id="@+id/progressBarFields"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFields"
                android:scrollbars="none"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_terms"
                android:gravity="center"
                android:textColor="@color/terms_text_color"
                style="@style/styleBodyAnalysis"
                android:textColorLink="@color/main_color"
                android:text="@string/text_terms_privacy"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnSendCredentials"
                android:enabled="true"
                android:layout_marginBottom="77dp"
                android:text="@string/submit_label"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/shape_gradient_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>