<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/text_tv_label_email"
        android:layout_marginBottom="5dp"
        style="@style/styleLabelInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="5dp"
        app:errorTextAppearance="@style/styleLabelAppearanceInputError"
        app:hintTextAppearance="@style/styleLabelAppearanceInputSuccess"
        android:id="@+id/layoutTextInput"
        app:passwordToggleTint="@color/main_color"
        app:boxStrokeColor="@color/password_field_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false" >
        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="#5D688C"
            android:background="@drawable/bg_input_success"
            android:hint="@string/hint_text_password"
            android:imeOptions="actionDone"
            android:layout_marginBottom="8dp"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvErrorMessage"
        android:text="@string/text_tv_label_error"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        style="@style/styleLabelInputError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>